# cmakepractice

./: CMakeLists.txt  foo.h  main.cpp
